# LearnFilament

./: .gitignore  CMakeLists.txt  README.md  build.sh
ios-demo/: BUILD.md
ios-demo/HelloCocoaPods/HelloCocoaPods.xcodeproj/: project.pbxproj
ios-demo/HelloCocoaPods/HelloCocoaPods.xcodeproj/xcshareddata/xcschemes/: HelloCocoaPods.xcscheme
ios-demo/hello-triangle/hello-triangle.xcodeproj/: project.pbxproj
ios-demo/hello-triangle/hello-triangle/deploy/ios-release/filament/include/gltfio/materials/: uberarchive.h
macos-demo/: CMakeLists.txt  main.cpp  rgba8_200x200.rgba
macos-demo/01-rectangle/: bakedColor.inc  main.cpp
macos-demo/01-triangle/: color_packing_explanation.md  main.cpp  triangle_explanation.md
macos-demo/02-cube/: main.cpp
macos-demo/02-cube-map/: main.cpp
macos-demo/02-cube-obj/: main.cpp
macos-demo/03-morphing/: main.cpp
macos-demo/04-pbr/: main.cpp
